# newt

./: Cargo.toml  README.md  justfile  opened.txt  sample-flake.nix
.cargo/: config.toml
crates/gnix/: Cargo.toml
crates/gnix/src/: main.rs
crates/newt-gui/: Cargo.toml
crates/newt-gui/src/: actor.rs  env.rs  main.rs  search.rs  tailwind.rs  theme.rs
crates/nix-channel-list/: Cargo.toml
crates/nix-channel-list/src/: lib.rs
crates/nix-elastic-search/: Cargo.toml
crates/nix-elastic-search-ureq/: Cargo.toml
crates/nix-elastic-search-ureq/src/: lib.rs
crates/nix-elastic-search/src/: lib.rs  response.rs
crates/nix-installed-list/: Cargo.toml
crates/nix-installed-list/src/: cache.rs  lib.rs
crates/nix-search-sort-utils/: Cargo.toml
crates/nix-search-sort-utils/src/: lib.rs
crates/nixhub-version-search/: Cargo.toml
crates/nixhub-version-search/src/: lib.rs
poetry-test/: pyproject.toml
src/: env.rs  main.rs  search.rs  theme.rs
